# ChangeLog for app-backup/burp
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 Dec 2014; Amadeusz Żołnowski <aidecoe@gentoo.org> burp-1.3.8.ebuild,
  burp-1.3.48.ebuild, burp-1.4.26.ebuild, files/burp.initd:
  Limit access to files and directories which might store some secrets.
  Shorten the postinst elog message about setting up certificates.

*burp-1.3.8 (23 Nov 2014)

  23 Nov 2014; Amadeusz Żołnowski <aidecoe@gentoo.org> +burp-1.3.8.ebuild,
  +files/1.3.8-bedup-conf-path.patch:
  Add version 1.3.8 which is present in Debian Wheezy. This is in case someone
  would like to backup to/from Debian. Burp warns if versions don't match.

*burp-1.3.48 (22 Nov 2014)

  22 Nov 2014; Amadeusz Żołnowski <aidecoe@gentoo.org> +burp-1.3.48.ebuild,
  +files/1.3.48-bedup-conf-path.patch, +files/1.3.48-tinfo.patch:
  Add latest stable version of burp. 1.4.26 is a stable candidate as stated on
  the homepage.

  21 Nov 2014; Amadeusz Żołnowski <aidecoe@gentoo.org> burp-1.4.26.ebuild,
  +files/1.4.26-bedup-conf-path.patch:
  Apply patch changing default config path for bedup.

  19 Nov 2014; Amadeusz Żołnowski <aidecoe@gentoo.org> burp-1.4.26.ebuild:
  Don't generate certificates in postinst phase. Print instructions instead.

  19 Nov 2014; Amadeusz Żołnowski <aidecoe@gentoo.org> burp-1.4.26.ebuild,
  files/burp.initd:
  Use checkpath to set up directories. Make a cosmetic change in the ebuild.

  19 Nov 2014; Amadeusz Żołnowski <aidecoe@gentoo.org> burp-1.4.26.ebuild:
  Fix condition whether /run/lock/burp exists or not.

  18 Nov 2014; Amadeusz Żołnowski <aidecoe@gentoo.org> burp-1.4.26.ebuild,
  files/burp.initd:
  Change location of a lock file to a writable 'burp' subdirectory. Create
  /run/lock/burp before running burp-server.

  Rels bug #411973. Thanks to Marcin Mirosław for pointing that out.

  16 Aug 2014; Amadeusz Żołnowski <aidecoe@gentoo.org> burp-1.4.20.ebuild,
  +files/burp.initd: